# well_agent

./: .gitignore  1_download.ipynb  2_process.ipynb  3_train.ipynb  4_deploy.ipynb  5_agentify.ipynb  README.md  agent.py  ai_query_tool.dbquery.ipynb  automl.ipynb  config.yaml  databricks.yml  dataset_profiling.ipynb  driver.py  file_prep.ipynb  filtered_well_data.dbquery.ipynb  pyproject.toml  reg-retrain-param-wv.py  summary.pkl  xgboost.ipynb
fixtures/: config.yaml  config_test.yaml  latest_n_obs.dbquery.ipynb  min_max_timeframe.dbquery.ipynb  most_recent_obs.dbquery.ipynb  predict_state.dbquery.ipynb  well_failure_counts.dbquery.ipynb
resources/: 3w_download.job.yml  download.job.yml  download_job.yml  hydrate.job.yml  process_job.yml
src/: 1_download.ipynb  2_process.ipynb  3_train.ipynb  4_deploy.ipynb  5_agentify.ipynb  6_evaluation.ipynb  agent.py  config.yaml  config_local.yaml  download.py  file_processing.py  utils.py
src/hydrate/: process.py  utils.py
src/well_agent/: download.py  process.py  utils.py
tests/: conftest.py  test_config_downloader.py  test_process_spark.py  test_utils.py
