[project]
name = "hydrate"
version = "0.0.2"
authors = [
    { name = "Scott McKean", email = "scott.mckean@databricks.com" },
    { name = "Volo Vragov", email = "volo.vragov@databricks.com" },
]
requires-python = ">= 3.12.0"

dependencies = [
    "databricks-connect==16.3.2",
    "databricks-langchain",
    "langgraph",
    "databricks-dlt",
    "mlflow==3.1.1",
    "lightgbm>=4.5.0",
    "pydantic==2.8.2",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "tsfresh>=0.20.0",
    "scikit-learn>=1.5.0"
]

[dependency-groups]
dev = [
    "pytest",
    "ipykernel"
]

[tool.pytest.ini_options]
pythonpath = [
    "src/",
]
testpaths = [
    "tests",
]
