[project]
name = "well_agent"
version = "0.0.2"
authors = [
    { name = "Scott McKean", email = "scott.mckean@databricks.com" },
    { name = "Volo Vragov", email = "volo.vragov@databricks.com" },
]
requires-python = ">= 3.12.0"

dependencies = [
    "databricks-agents",
    "databricks-connect==16.3.2",
    "databricks-langchain==0.6.0",
    "langgraph",
    "lightgbm>=4.5.0",
    "mlflow==3.1.1",
    "pydantic>=2.1.0",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "scikit-learn>=1.5.0",
    "tsfresh>=0.20.0"
]

[dependency-groups]
dev = [
    "pytest",
    "ipykernel"
]

[tool.pytest.ini_options]
pythonpath = [
    "src/",
]
testpaths = [
    "tests",
]
